--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello this is my website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, corrupti officia at sint perferendis eum odit amet temporibus inventore sed. Quibusdam laborum, a blanditiis at eveniet repudiandae aliquid consectetur soluta.</p>
 </body>
 </html>
